[gd_scene load_steps=23 format=3 uid="uid://c087l7ltwvq5r"]

[ext_resource type="PackedScene" uid="uid://cof1cf5gtmex" path="res://character_body_3d.tscn" id="1_scl8b"]
[ext_resource type="Texture2D" uid="uid://be8hjrp42g206" path="res://Free_pixel_tiles_pack/cobblestone_3.png" id="3_e1dy4"]
[ext_resource type="Script" path="res://BoxContainer.gd" id="4_qflal"]
[ext_resource type="Texture2D" uid="uid://bb0nxf4u4vnl0" path="res://aim reticle.png" id="5_vbrxr"]
[ext_resource type="Script" path="res://Control.gd" id="6_w6i24"]
[ext_resource type="Texture2D" uid="uid://cbfirovlf2pc6" path="res://Screen Overlay Effects/blurry Blood Smear Overlay.png" id="7_abb43"]
[ext_resource type="Script" path="res://EnemSpawner.gd" id="12_f3dck"]
[ext_resource type="Script" path="res://UpgradeSpawner.gd" id="13_3mcwk"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_83mae"]

[sub_resource type="Sky" id="Sky_e4oif"]
sky_material = SubResource("ProceduralSkyMaterial_83mae")

[sub_resource type="Environment" id="Environment_tflw2"]
background_mode = 2
background_energy_multiplier = 2.43
sky = SubResource("Sky_e4oif")
ambient_light_source = 3
ambient_light_color = Color(1, 0.305882, 0.345098, 1)
ambient_light_energy = 2.43
reflected_light_source = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_uuqen"]

[sub_resource type="NavigationMesh" id="NavigationMesh_n6t32"]
vertices = PackedVector3Array(-87, 0, -98.75, -98.75, 0, -98.75, -98.75, 0, -89.5, -87, 0, -98.75, -98.75, 0, -89.5, -98.75, 0, -80, -75.25, 0, -98.75, -87, 0, -98.75, -98.75, 0, -80, -98.75, 0, -70.75, -5.25, 0, -23.75, -5.25, 0, -26.25, -16.5, 0, -98.75, -28.25, 0, -98.75, -75.25, 0, -98.75, -98.75, 0, -70.75, -98.75, 0, -61.25, -63.5, 0, -98.75, -75.25, 0, -98.75, -98.75, 0, -61.25, -98.75, 0, -52, -40, 0, -98.75, -51.75, 0, -98.75, -98.75, 0, -33.25, -98.75, 0, -23.75, -5.25, 0, -23.75, -51.75, 0, -98.75, -63.5, 0, -98.75, -98.75, 0, -52, -98.75, 0, -42.5, -5.25, 0, -26.25, -4.75, 0.25, -26.25, -4.75, 0, -98.75, -16.5, 0, -98.75, -51.75, 0, -98.75, -98.75, 0, -42.5, -98.75, 0, -33.25, -5.25, 0, -23.75, -28.25, 0, -98.75, -40, 0, -98.75, -4.25, 0.25, -26.25, -4.25, 1.25, -24.5, 5, 1.25, -24.5, 5, 0.25, -26.25, -4.25, 0.25, -26.25, 5, 0.25, -26.25, 5.5, 0, -98.75, -4.75, 0, -98.75, 5, 0.25, -26.25, 5.5, 0.25, -26.25, 5.5, 0, -98.75, -4.75, 0, -98.75, -4.75, 0.25, -26.25, -4.25, 0.25, -26.25, 99, 0, -89.5, 99, 0, -98.75, 87.25, 0, -98.75, 99, 0, -80, 99, 0, -89.5, 87.25, 0, -98.75, 99, 0, -80, 87.25, 0, -98.75, 75.5, 0, -98.75, 99, 0, -70.75, 17, 0, -98.75, 6, 0, -26.25, 6, 0, -23.75, 28.75, 0, -98.75, 99, 0, -61.25, 99, 0, -70.75, 75.5, 0, -98.75, 99, 0, -61.25, 75.5, 0, -98.75, 63.75, 0, -98.75, 99, 0, -52, 99, 0, -33.25, 52.25, 0, -98.75, 40.5, 0, -98.75, 6, 0, -23.75, 99, 0, -23.75, 99, 0, -52, 63.75, 0, -98.75, 52.25, 0, -98.75, 99, 0, -42.5, 5.5, 0, -98.75, 5.5, 0.25, -26.25, 6, 0, -26.25, 17, 0, -98.75, 99, 0, -33.25, 99, 0, -42.5, 52.25, 0, -98.75, 40.5, 0, -98.75, 28.75, 0, -98.75, 6, 0, -23.75, 5, 4.75, -15.75, 5, 1.25, -24.5, -4.25, 1.25, -24.5, -4.25, 4.75, -15.75, 5, 4.5, -18.6667, -4.25, 4.5, -18.6667, -4.25, 1.25, -6.75, 5, 1.25, -6.75, 5, 4.75, -15.75, -4.25, 4.75, -15.75, -4.25, 4.75, -13.1786, -4.25, 4.25, -11.8929, 5, 4.25, -11.8929, 5, 4.75, -13.1786, -0.00497437, 4.75, -13.503, 0.0200882, 4.25, -11.9981, -5.25, 0, -10, -3.25, 0, -10.25, -3.25, 0, -21, -5.25, 0, -21.25, -98.75, 0, -15.75, -98.75, 0, -7.5, -5.25, 0, -21.25, -5.25, 0, -23.75, -98.75, 0, -23.75, -98.75, 0, -15.75, -98.75, 0, -7.5, -5.25, 0, -7.5, -5.25, 0, -10, 4, 0, -21, 4, 0, -10.25, 6, 0, -10, 99, 0, -7.5, 99, 0, -15.75, 6, 0, -21.25, 99, 0, -23.75, 6, 0, -23.75, 6, 0, -21.25, 99, 0, -15.75, 6, 0, -10, 6, 0, -7.5, 99, 0, -7.5, -3.25, 0, -10.25, 4, 0, -10.25, 4, 0, -21, -3.25, 0, -21, -98.75, 0, 92.25, -98.75, 0, 99, -87, 0, 99, -98.75, 0, 85.5, -98.75, 0, 92.25, -87, 0, 99, -98.75, 0, 78.75, -98.75, 0, 85.5, -87, 0, 99, -98.75, 0, 72.25, -98.75, 0, 78.75, -87, 0, 99, -98.75, 0, 65.5, -98.75, 0, 72.25, -87, 0, 99, -98.75, 0, 65.5, -87, 0, 99, -75.25, 0, 99, -98.75, 0, 59, -28.25, 0, 99, -16.5, 0, 99, -4.75, 0.25, -5, -98.75, 0, 52.25, -98.75, 0, 59, -75.25, 0, 99, -98.75, 0, 45.75, -98.75, 0, 52.25, -75.25, 0, 99, -98.75, 0, 45.75, -75.25, 0, 99, -63.5, 0, 99, -98.75, 0, 39, -4.75, 0.25, -5, -98.75, 0, 5.75, -98.75, 0, 12.25, -98.75, 0, 32.25, -98.75, 0, 39, -63.5, 0, 99, -98.75, 0, 25.5, -98.75, 0, 32.25, -63.5, 0, 99, -51.75, 0, 99, -4.75, 0.25, -5, -98.75, 0, 12.25, -98.75, 0, 19, -40, 0, 99, -28.25, 0, 99, -98.75, 0, 19, -98.75, 0, 25.5, -51.75, 0, 99, -40, 0, 99, -5.25, 0, -5, -5.25, 0, -7.5, -98.75, 0, -7.5, -98.75, 0, -1, -16.5, 0, 99, -4.75, 0, 99, -4.75, 0.25, -5, -4.75, 0.25, -5, -5.25, 0, -5, -98.75, 0, -1, -98.75, 0, 5.75, 87.25, 0, 99, 99, 0, 99, 99, 0, 92.25, 87.25, 0, 99, 99, 0, 92.25, 99, 0, 85.5, 87.25, 0, 99, 99, 0, 85.5, 99, 0, 78.75, 87.25, 0, 99, 99, 0, 78.75, 99, 0, 72.25, 87.25, 0, 99, 99, 0, 72.25, 99, 0, 65.5, 75.5, 0, 99, 87.25, 0, 99, 99, 0, 65.5, 99, 0, 59, 28.75, 0, 99, 40.5, 0, 99, 99, 0, 19, 75.5, 0, 99, 99, 0, 59, 99, 0, 52.25, 75.5, 0, 99, 99, 0, 52.25, 99, 0, 45.75, 63.75, 0, 99, 75.5, 0, 99, 99, 0, 45.75, 99, 0, 39, 99, 0, 12.25, 99, 0, 5.75, 5.5, 0.25, -5, 63.75, 0, 99, 99, 0, 39, 99, 0, 32.25, 52.25, 0, 99, 63.75, 0, 99, 99, 0, 32.25, 99, 0, 25.5, 99, 0, 19, 99, 0, 12.25, 5.5, 0.25, -5, 17, 0, 99, 28.75, 0, 99, 52.25, 0, 99, 99, 0, 25.5, 99, 0, 19, 40.5, 0, 99, 99, 0, -7.5, 6, 0, -7.5, 6, 0, -5, 99, 0, -1, 5.5, 0.25, -5, 5.5, 0, 99, 17, 0, 99, 99, 0, -1, 6, 0, -5, 5.5, 0.25, -5, 99, 0, 5.75, 5, 0.25, -5, 5, 1.25, -6.75, -4.25, 1.25, -6.75, -4.25, 0.25, -5, -4.25, 0.25, -5, -4.75, 0, 99, 5.5, 0, 99, 5, 0.25, -5, -4.25, 0.25, -5, -4.75, 0.25, -5, -4.75, 0, 99, 5.5, 0, 99, 5.5, 0.25, -5, 5, 0.25, -5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 6), PackedInt32Array(11, 10, 12), PackedInt32Array(12, 10, 13), PackedInt32Array(16, 15, 14), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 17), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 21), PackedInt32Array(24, 21, 25), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 26), PackedInt32Array(31, 30, 32), PackedInt32Array(32, 30, 33), PackedInt32Array(36, 35, 34), PackedInt32Array(39, 38, 37), PackedInt32Array(43, 42, 40), PackedInt32Array(40, 42, 41), PackedInt32Array(44, 47, 45), PackedInt32Array(45, 47, 46), PackedInt32Array(50, 49, 48), PackedInt32Array(53, 52, 51), PackedInt32Array(56, 55, 54), PackedInt32Array(59, 58, 57), PackedInt32Array(60, 63, 61), PackedInt32Array(61, 63, 62), PackedInt32Array(65, 64, 66), PackedInt32Array(66, 64, 67), PackedInt32Array(70, 69, 68), PackedInt32Array(71, 74, 72), PackedInt32Array(72, 74, 73), PackedInt32Array(75, 79, 76), PackedInt32Array(76, 79, 77), PackedInt32Array(77, 79, 78), PackedInt32Array(80, 83, 81), PackedInt32Array(81, 83, 82), PackedInt32Array(85, 84, 86), PackedInt32Array(86, 84, 87), PackedInt32Array(90, 89, 88), PackedInt32Array(93, 92, 91), PackedInt32Array(97, 99, 94), PackedInt32Array(94, 99, 98), PackedInt32Array(98, 99, 96), PackedInt32Array(98, 96, 95), PackedInt32Array(102, 108, 103), PackedInt32Array(103, 108, 104), PackedInt32Array(104, 109, 105), PackedInt32Array(105, 109, 100), PackedInt32Array(100, 109, 101), PackedInt32Array(101, 109, 106), PackedInt32Array(106, 109, 107), PackedInt32Array(107, 108, 102), PackedInt32Array(108, 109, 104), PackedInt32Array(109, 108, 107), PackedInt32Array(111, 110, 112), PackedInt32Array(112, 110, 113), PackedInt32Array(113, 110, 114), PackedInt32Array(114, 110, 115), PackedInt32Array(117, 116, 118), PackedInt32Array(118, 116, 119), PackedInt32Array(122, 121, 120), PackedInt32Array(123, 128, 124), PackedInt32Array(124, 128, 125), PackedInt32Array(125, 128, 127), PackedInt32Array(125, 127, 126), PackedInt32Array(130, 129, 131), PackedInt32Array(131, 129, 132), PackedInt32Array(135, 134, 133), PackedInt32Array(139, 138, 136), PackedInt32Array(136, 138, 137), PackedInt32Array(142, 141, 140), PackedInt32Array(145, 144, 143), PackedInt32Array(148, 147, 146), PackedInt32Array(151, 150, 149), PackedInt32Array(154, 153, 152), PackedInt32Array(155, 158, 156), PackedInt32Array(156, 158, 157), PackedInt32Array(161, 160, 159), PackedInt32Array(164, 163, 162), PackedInt32Array(167, 166, 165), PackedInt32Array(168, 171, 169), PackedInt32Array(169, 171, 170), PackedInt32Array(174, 173, 172), PackedInt32Array(177, 176, 175), PackedInt32Array(179, 178, 180), PackedInt32Array(180, 178, 181), PackedInt32Array(183, 182, 184), PackedInt32Array(184, 182, 185), PackedInt32Array(185, 182, 186), PackedInt32Array(188, 187, 189), PackedInt32Array(189, 187, 190), PackedInt32Array(192, 191, 193), PackedInt32Array(193, 191, 194), PackedInt32Array(197, 196, 195), PackedInt32Array(199, 198, 200), PackedInt32Array(200, 198, 201), PackedInt32Array(204, 203, 202), PackedInt32Array(207, 206, 205), PackedInt32Array(210, 209, 208), PackedInt32Array(213, 212, 211), PackedInt32Array(216, 215, 214), PackedInt32Array(219, 218, 220), PackedInt32Array(220, 218, 217), PackedInt32Array(223, 222, 221), PackedInt32Array(226, 225, 224), PackedInt32Array(229, 228, 227), PackedInt32Array(232, 231, 233), PackedInt32Array(233, 231, 230), PackedInt32Array(236, 235, 234), PackedInt32Array(239, 238, 237), PackedInt32Array(242, 241, 243), PackedInt32Array(243, 241, 240), PackedInt32Array(245, 244, 246), PackedInt32Array(246, 244, 248), PackedInt32Array(246, 248, 247), PackedInt32Array(250, 249, 251), PackedInt32Array(251, 249, 252), PackedInt32Array(254, 253, 255), PackedInt32Array(255, 253, 256), PackedInt32Array(259, 258, 257), PackedInt32Array(261, 260, 262), PackedInt32Array(262, 260, 263), PackedInt32Array(267, 266, 264), PackedInt32Array(264, 266, 265), PackedInt32Array(271, 270, 268), PackedInt32Array(268, 270, 269), PackedInt32Array(274, 273, 272), PackedInt32Array(277, 276, 275)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ci2y"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mnfbx"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xeph4"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ovlr"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ugsjh"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q2sd4"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5kgk5"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p5mxk"]
albedo_texture = ExtResource("3_e1dy4")

[sub_resource type="Curve" id="Curve_tpruo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25, 0.5), 0.0, 0.0, 0, 0, Vector2(0.5, 0.75), 0.0, 0.0, 0, 0, Vector2(0.75, 0.9), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[node name="Node3D" type="Node3D"]

[node name="PC" parent="." instance=ExtResource("1_scl8b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.45815, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tflw2")
camera_attributes = SubResource("CameraAttributesPractical_uuqen")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.263385, 0.964691, 0, -0.964691, 0.263385, 0, 18.2122, 8.18105)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
navigation_mesh = SubResource("NavigationMesh_n6t32")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
material_override = SubResource("StandardMaterial3D_8ci2y")
use_collision = true
size = Vector3(200, 1, 200)

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(10, 0, 0, 0, 0.866025, -5, 0, 0.5, 8.66025, 0.274, 1.5, -9.061)
material_override = SubResource("StandardMaterial3D_mnfbx")
use_collision = true

[node name="CSGBox3D4" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 5, 0.274, 3.9, -15.604)
material_override = SubResource("StandardMaterial3D_xeph4")
use_collision = true

[node name="CSGBox3D3" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(-10, -7.54979e-08, -1.30766e-06, 0, 0.866025, -5, 1.50996e-06, -0.5, -8.66025, 0.274, 1.5, -22.196)
material_override = SubResource("StandardMaterial3D_3ovlr")
use_collision = true

[node name="CSGBox3D5" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 49, 0)
material_override = SubResource("StandardMaterial3D_ugsjh")
use_collision = true
size = Vector3(1, 100, 200)

[node name="CSGBox3D6" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -100, 49, 0)
material_override = SubResource("StandardMaterial3D_q2sd4")
use_collision = true
size = Vector3(1, 100, 200)

[node name="CSGBox3D7" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, 100)
material_override = SubResource("StandardMaterial3D_5kgk5")
use_collision = true
size = Vector3(200, 100, 1)

[node name="CSGBox3D8" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, -100)
material_override = SubResource("StandardMaterial3D_p5mxk")
use_collision = true
size = Vector3(200, 100, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_w6i24")
dmgCurve = SubResource("Curve_tpruo")

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_qflal")

[node name="Sprite2D" type="Sprite2D" parent="Control/BoxContainer"]
scale = Vector2(2, 2)
texture = ExtResource("5_vbrxr")

[node name="Blood" type="Sprite2D" parent="Control/BoxContainer"]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("7_abb43")

[node name="Card0" type="Sprite2D" parent="Control/BoxContainer"]
position = Vector2(848, 384)

[node name="Card1" type="Sprite2D" parent="Control/BoxContainer"]
position = Vector2(618, 384)

[node name="Card2" type="Sprite2D" parent="Control/BoxContainer"]
position = Vector2(388, 384)

[node name="Card3" type="Sprite2D" parent="Control/BoxContainer"]
position = Vector2(158, 384)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Spawns" type="Node" parent="."]

[node name="Node3D" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 37.353)

[node name="Node3D2" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -35.4757)

[node name="Node3D3" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.7478, 1, -35.4757)

[node name="Node3D4" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.7478, 1, 32.5641)

[node name="Node3D5" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1603, 1, 32.5641)

[node name="Node3D6" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1603, 1, -3.84732)

[node name="Node3D7" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.2521, 1, -3.84732)

[node name="Node3D8" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35.4191, 1, -31.4061)

[node name="EnemSpawner" type="Node3D" parent="."]
script = ExtResource("12_f3dck")

[node name="UpgradeSpawner" type="Node3D" parent="."]
script = ExtResource("13_3mcwk")

[connection signal="timeout" from="Timer" to="EnemSpawner" method="_on_timer_timeout"]
[connection signal="enemDeath" from="EnemSpawner" to="UpgradeSpawner" method="_on_enem_spawner_enem_death"]
